--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
     <main>
         <section id="about-us" class="about-us bg-light py-5">
             <div class="container">
-                <h2 class="section-title"><small><small>Oaza, rekolekcje i odpoczynek w</small> <br> Chorwacji oraz
-                        Bośni i
-                        Hercegowinie</small></h2>
+                <h2 class="section-title">Informacje</h2>
                 <div class="underline"></div>
+                <h3 class="text-center"><small>Oaza, rekolekcje i odpoczynek w Chorwacji oraz
+                        Bośni i
+                        Hercegowinie</small></h3>
                 <div class="row price-info">
                     <div class="about-us-info" data-aos="zoom-in-right" data-aos-duration="500" data-aos-delay="100">
                         <p><i class="fa-regular fa-calendar"></i></p>
@@ -154,7 +155,7 @@
                 <div class="row text-center d-flex align-items-center my-5 contact-us">
                     <div class="col-md-6 col-lg-6 place-main contact-us">
                         <h4>Numer telefonu</h4>
-                        <p class="info">Daniel: <strong><a href="tel:574093711">574 093 711</a></strong></p>
+                        <p class="info">Daniel Roczniak: <strong><a href="tel:574093711">574 093 711</a></strong></p>
                     </div>
                     <div class="col-md-6 col-lg-6 place-cracow contact-us">
                         <h4>Adres e-mail</h4>
@@ -170,8 +171,9 @@
         </section>
     </main>
     <footer class="bg-dark text-light py-4 text-center">
-        <p class="mb-0">&copy; 2026 | Strony Internetowe <a style="color: inherit;" href="tel:606985335">Tomasz
-                Nosek</a></p>
+        <p class="mb-0" style="opacity: 0.8;"><small>2026 | Strony Internetowe <a style="color: inherit;"
+                    href="tel:606985335">Tomasz
+                    Nosek</a></small></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
