--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="pl_PL">
+    <meta property="og:title" content="Pielgrzymka Czchów">
+    <meta property="og:description"
+        content="Informacje o pielgrzymce z Czchowa do Medjugorie: trasa, zapisy, informacje, cena, program, chorwacja, bośnia i hercegowina, parafia, parafia czchow, nmp czchow">
+    <meta property="og:url" content="https://pielgrzymkaczchow.pl/">
+    <meta property="og:site_name" content="Pielgrzymka Czchów">
     <title>Pielgrzymka Medjugorie</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -18,7 +25,6 @@
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#nav">
-
     <nav class="navbar navbar-expand-lg position-fixed top-0 w-100 py-3" id="nav"></nav>
     <header class="hero-img" id="home">
         <div class="hero-text text-center p-2">
@@ -39,14 +45,14 @@
                         Bośni i
                         Hercegowinie</small></h3>
                 <div class="row price-info">
-                    <div class="about-us-info" data-aos="zoom-in-right" data-aos-duration="500" data-aos-delay="100">
+                    <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100">
                         <p><i class="fa-regular fa-calendar"></i></p>
                         <p class="about-us-cart-title mb-1">
                         <h3>27 Czerwiec - 5 Lipiec 2026 (9 dni)</h3>
                         </p>
                         <p class="about-us-cart-text">Data</p>
                     </div>
-                    <div class="about-us-info" data-aos="zoom-in-right" data-aos-duration="500" data-aos-delay="300">
+                    <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300">
                         <p><i class="fa-regular fa-money-bill-1"></i></p>
                         <p class="about-us-cart-title mb-1">
                         <h3>900 ZŁ + 350 EUR</h3>
@@ -75,7 +81,7 @@
             <div class="container">
                 <div class="price-wrap row text-center justify-content-center journey-schedule">
                     <div class="col-md-6 col-xl-6">
-                        <div data-aos="zoom-in" data-aos-duration="1000">
+                        <div data-aos="zoom-in" data-aos-duration="600">
                             <div class="price-box">
                                 <p class="price-title">Dzień 1</p>
                                 <hr>
@@ -89,7 +95,7 @@
                     </div>
 
                     <div class="col-md-6 col-xl-6">
-                        <div data-aos="zoom-in" data-aos-duration="1000">
+                        <div data-aos="zoom-in" data-aos-duration="600">
                             <div class="price-box">
                                 <p class="price-title">Dzień 2</p>
                                 <hr>
@@ -104,7 +110,7 @@
                     </div>
 
                     <div class="">
-                        <div data-aos="zoom-in" data-aos-duration="1000">
+                        <div data-aos="zoom-in" data-aos-duration="600">
                             <div class="price-box">
                                 <p class="price-title">Dzień 3 - 8</p>
                                 <hr>
@@ -130,7 +136,7 @@
                     </div>
 
                     <div class="">
-                        <div data-aos="zoom-in" data-aos-duration="1000">
+                        <div data-aos="zoom-in" data-aos-duration="600">
                             <div class="price-box">
                                 <p class="price-title">Dzień 9</p>
                                 <hr>
@@ -171,21 +177,17 @@
         </section>
     </main>
     <footer class="bg-dark text-light py-4 text-center">
-        <p class="mb-0" style="opacity: 0.8;"><small>2026 | Strony Internetowe <a style="color: inherit;"
-                    href="tel:606985335">Tomasz
-                    Nosek</a></small></p>
+        <p class="mb-0" style="opacity: 0.8;">
+            <small>&copy; 2026 | Strony Internetowe
+                <a style="color: inherit;" href="tel:606985335">TomaszNosek</a>
+            </small>
+        </p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="./js/slick.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/aos.js"></script>
-    <script src="./js/script.js"></script>
-
 </body>
 
 </html>
