Change fonts sizes on entire web page, modify contact section

--- a/index.html
+++ b/index.html
@@ -42,28 +42,23 @@
             <div class="container">
                 <h2 class="section-title">Informacje</h2>
                 <div class="underline"></div>
-                <h3 class="text-center"><small>Oaza, rekolekcje i odpoczynek w Chorwacji oraz
-                        Bośni i
-                        Hercegowinie</small></h3>
+                <h3 class="text-center">
+                    <small>Oaza, rekolekcje i odpoczynek w Chorwacji oraz Bośni i Hercegowinie</small>
+                </h3>
                 <div class="row price-info">
                     <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100">
                         <p><i class="fa-regular fa-calendar"></i></p>
-                        <p class="about-us-cart-title mb-1">
-                        <h3>27 Czerwiec - 5 Lipiec 2026 (9 dni)</h3>
-                        </p>
                         <p class="about-us-cart-text">Data</p>
+                        <h3>27.06 - 5.07 2026 <small>(9 dni)</small></h3>
                     </div>
                     <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300">
                         <p><i class="fa-regular fa-money-bill-1"></i></p>
-                        <p class="about-us-cart-title mb-1">
-                        <h3>900 ZŁ + 350 EUR</h3>
-                        </p>
                         <p class="about-us-cart-text">Cena</p>
+                        <h3>900 ZŁ + 350 EUR</h3>
                     </div>
                 </div>
-                <p class="text-muted text-center">
-                    <strong>Cena obejmuje świadczenia, takie jak:</strong>
-                <ul style="list-style-type: none; text-align: center; padding-left: 0; padding: 10px;">
+
+                <ul>
                     <li>Opieka duszpasterska i opłata tłumacza w Medjugorje</li><br>
                     <li>Przejazd autokarem klasy LUX (klimatyzacja, wc, video…) </li><br>
                     <li>Ubezpieczenie KL i NNW i bagaż</li><br>
@@ -73,11 +68,11 @@
                     </li><br>
                     <li>7 noclegów w Medjugorje: pokoje 2-, 3-, 4-osobowe z łazienkami w pensjonacie***</li><br>
                 </ul>
-                </p>
+
             </div>
         </section>
         <section id="prices" class="prices py-5 bg-light" style="background-color: #ebecf2 !important;">
-            <h2 class="section-title"><small>Program Pielgrzymki</small></h2>
+            <h2 class="section-title">Program Pielgrzymki</h2>
             <div class="underline"></div>
             <div class="container">
                 <div class="price-wrap row text-center justify-content-center journey-schedule">
@@ -90,7 +85,7 @@
                                 <p><span>*</span></p>
                                 <p>Pakowanie do autokaru. Przejazd przez Słowację, Węgry</p>
                                 <p><span>*</span></p>
-                                <p>Nocleg w Ludbergu lub nad Balatonem. <br> Odpoczynek</p>
+                                <p>Nocleg w Ludbergu. Odpoczynek</p>
                             </div>
                         </div>
                     </div>
@@ -110,43 +105,39 @@
                         </div>
                     </div>
 
-                    <div class="">
-                        <div data-aos="zoom-in" data-aos-duration="600">
-                            <div class="price-box">
-                                <p class="price-title">Dzień 3 - 8</p>
-                                <hr>
-                                <p>Codzienne wieczorne nabożeństwo międzynarodowe: Różaniec, Msza święta, modlitwa o
-                                    uzdrowienie duszy i ciała </p>
-                                <p><span>*</span></p>
-                                <p>Po Mszy Świętej Adoracja Najświętszego Sakramentu (wtorek i czwartek) </p>
-                                <p><span>*</span></p>
-                                <p>Wspólna Droga Krzyżowa na górę Kriźevac oraz Różaniec na Górę Objawień </p>
-                                <p><span>*</span></p>
-                                <p>Wyjazd do miejscowości Gradać – plażowanie i wypoczynek nad Morzem Adriatyckim w
-                                    Chorwacji (co najmniej dwa dni)</p>
-                                <p><span>*</span></p>
-                                <p>W miarę możliwości spotkania z Wizjonerami i Ojcami Franciszkanami </p>
-                                <p><span>*</span></p>
-                                <p>Mostar – zwiedzanie zabytkowego Starego Miasta </p>
-                                <p><span>*</span></p>
-                                <p>Wizyta we wspólnocie Cenacolo</p>
-                                <p><span>*</span></p>
-                                <p>Opcjonalnie wyjazd do Dubrownika (dopłata 150zl)</p>
-                            </div>
+                    <div data-aos="zoom-in" data-aos-duration="600">
+                        <div class="price-box">
+                            <p class="price-title">Dzień 3 - 8</p>
+                            <hr>
+                            <p>Codzienne wieczorne nabożeństwo międzynarodowe: Różaniec, Msza święta, modlitwa o
+                                uzdrowienie duszy i ciała </p>
+                            <p><span>*</span></p>
+                            <p>Po Mszy Świętej Adoracja Najświętszego Sakramentu (wtorek i czwartek) </p>
+                            <p><span>*</span></p>
+                            <p>Wspólna Droga Krzyżowa na górę Kriźevac oraz Różaniec na Górę Objawień </p>
+                            <p><span>*</span></p>
+                            <p>Wyjazd do miejscowości Gradać – plażowanie i wypoczynek nad Morzem Adriatyckim w
+                                Chorwacji (co najmniej dwa dni)</p>
+                            <p><span>*</span></p>
+                            <p>W miarę możliwości spotkania z Wizjonerami i Ojcami Franciszkanami </p>
+                            <p><span>*</span></p>
+                            <p>Mostar – zwiedzanie zabytkowego Starego Miasta </p>
+                            <p><span>*</span></p>
+                            <p>Wizyta we wspólnocie Cenacolo</p>
+                            <p><span>*</span></p>
+                            <p>Opcjonalnie wyjazd do Dubrownika (dopłata 150zl)</p>
                         </div>
                     </div>
 
-                    <div class="">
-                        <div data-aos="zoom-in" data-aos-duration="600">
-                            <div class="price-box">
-                                <p class="price-title">Dzień 9</p>
-                                <hr>
-                                <p>Śniadanie</p>
-                                <p><span>*</span></p>
-                                <p>Pakowanie bagaży - wyjazd z Medjugorje</p>
-                                <p><span>*</span></p>
-                                <p>Przyjazd do Polski po północy</p>
-                            </div>
+                    <div data-aos="zoom-in" data-aos-duration="600">
+                        <div class="price-box">
+                            <p class="price-title">Dzień 9</p>
+                            <hr>
+                            <p>Śniadanie</p>
+                            <p><span>*</span></p>
+                            <p>Pakowanie bagaży - wyjazd z Medjugorje</p>
+                            <p><span>*</span></p>
+                            <p>Przyjazd do Polski po północy</p>
                         </div>
                     </div>
                 </div>
@@ -156,15 +147,22 @@
             <h2 class="section-title">zapisy</h2>
             <div class="underline"></div>
             <div class="container">
-                <p class="text-center"><strong>Przy zgłoszeniu proszę podać pełne dane</strong> <br> imię i nazwisko,
-                    adres, telefon, nr dowodu osobistego
-                    lub paszportu. </p>
-                <div class="row text-center d-flex align-items-center my-5 contact-us">
-                    <div class="col-md-6 col-lg-6 place-main contact-us">
+                <h6 class="text-center">
+                    <strong>Przy zgłoszeniu proszę podać pełne dane:</strong> <br> imię i nazwisko, adres, telefon, nr
+                    dowodu osobistego lub paszportu.
+                </h6>
+                <div class="row text-center d-flex my-5 contact-us">
+                    <div class="col-md-6 col-lg-4 place-main contact-us">
                         <h4>Numer telefonu</h4>
-                        <p class="info">Daniel Roczniak: <strong><a href="tel:574093711">574 093 711</a></strong></p>
+                        <p class="info">Daniel: <strong><a href="tel:574093711">574 093 711</a></strong></p>
                     </div>
-                    <div class="col-md-6 col-lg-6 place-cracow contact-us">
+                    <div class="col-md-6 col-lg-4 place-main contact-us">
+                        <h4>Stacjonarnie</h4>
+                        <p class="info">Zapisy możliwe również w <strong>kancelarii parafialnej</strong> oraz u
+                            <strong>ks. Pawła</strong>
+                        </p>
+                    </div>
+                    <div class="col-md-6 col-lg-4 place-cracow contact-us">
                         <h4>Adres e-mail</h4>
                         <p class="info"><strong><a href="mailto:oazylso@gmail.com">oazylso@gmail.com</a></strong></p>
                     </div>
