--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <body data-bs-spy="scroll" data-bs-target="#nav">
     <nav class="navbar navbar-expand-lg position-fixed top-0 w-100 py-3" id="nav"></nav>
+
     <header class="hero-img" id="home">
         <div class="hero-text text-center p-2">
             <div data-aos="zoom-in-down">
@@ -37,6 +38,7 @@
         </div>
         <div class="hero-shadow"></div>
     </header>
+
     <main>
         <section id="about-us" class="about-us bg-light py-5">
             <div class="container">
@@ -71,6 +73,7 @@
 
             </div>
         </section>
+
         <section id="prices" class="prices py-5 bg-light" style="background-color: #ebecf2 !important;">
             <h2 class="section-title">Program Pielgrzymki</h2>
             <div class="underline"></div>
@@ -91,7 +94,7 @@
                     </div>
 
                     <div class="col-md-6 col-xl-6">
-                        <div data-aos="zoom-in" data-aos-duration="600">
+                        <div data-aos="zoom-in" data-aos-duration="600" data-aos-delay="200">
                             <div class="price-box">
                                 <p class="price-title">Dzień 2</p>
                                 <hr>
@@ -143,6 +146,16 @@
                 </div>
             </div>
         </section>
+
+        <section id="gallery" class="gallery py-5">
+            <h2 class="section-title">Galeria</h2>
+            <div class="underline"></div>
+            <div class="container">
+
+
+            </div>
+        </section>
+
         <section id="contact" class="contact py-5">
             <h2 class="section-title">zapisy</h2>
             <div class="underline"></div>
@@ -152,17 +165,20 @@
                     dowodu osobistego lub paszportu.
                 </h6>
                 <div class="row text-center d-flex my-5 contact-us">
-                    <div class="col-md-6 col-lg-4 place-main contact-us">
+                    <div class="col-md-6 col-lg-4 place-main contact-us" data-aos="zoom-in" data-aos-duration="500"
+                        data-aos-delay="100">
                         <h4>Numer telefonu</h4>
                         <p class="info">Daniel: <strong><a href="tel:574093711">574 093 711</a></strong></p>
                     </div>
-                    <div class="col-md-6 col-lg-4 place-main contact-us">
+                    <div class="col-md-6 col-lg-4 place-main contact-us" data-aos="zoom-in" data-aos-duration="500"
+                        data-aos-delay="300">
                         <h4>Stacjonarnie</h4>
                         <p class="info">Zapisy możliwe również w <strong>kancelarii parafialnej</strong> oraz u
                             <strong>ks. Pawła</strong>
                         </p>
                     </div>
-                    <div class="col-md-6 col-lg-4 place-cracow contact-us">
+                    <div class="col-md-6 col-lg-4 place-cracow contact-us" data-aos="zoom-in" data-aos-duration="500"
+                        data-aos-delay="500">
                         <h4>Adres e-mail</h4>
                         <p class="info"><strong><a href="mailto:oazylso@gmail.com">oazylso@gmail.com</a></strong></p>
                     </div>
@@ -175,6 +191,7 @@
             <div class="contact-shadow"></div>
         </section>
     </main>
+
     <footer class="bg-dark text-light py-4 text-center">
         <p class="mb-0" style="opacity: 0.7;">
             <small>&copy; 2026 | Strony Internetowe
@@ -182,6 +199,7 @@
             </small>
         </p>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
