--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="underline"></div>
             <div class="container">
                 <h6 class="text-center">
-                    <strong>Przy zgłoszeniu proszę podać pełne dane:</strong> <br> imię i nazwisko, adres, telefon, nr
+                    <strong>Przy zgłoszeniu proszę podać pełne dane:</strong> <br> imię i nazwisko, nr PESEL, adres, telefon, nr
                     dowodu osobistego lub paszportu.
                 </h6>
                 <div class="row text-center d-flex my-5 contact-us">
