Add discount text in information section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                         <p><i class="fa-regular fa-money-bill-1"></i></p>
                         <p class="about-us-cart-text">Cena</p>
                         <h3>900 ZŁ + 350 EUR</h3>
+                        <p class="color: #E53935">Zniżki dla młodzieży w wieku 15 do 18 lat</p>
                     </div>
                 </div>
 
