Make small improvments in contact section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                         <p><i class="fa-regular fa-money-bill-1"></i></p>
                         <p class="about-us-cart-text">Cena</p>
                         <h3>900 ZŁ + 350 EUR</h3>
+                        <p style="color: #e53935; text-align: center;">Zniżki dla młodzieży w wieku 15 do 18 lat</p>
                     </div>
                 </div>
 
@@ -147,21 +148,12 @@
             </div>
         </section>
 
-        <section id="gallery" class="gallery py-5">
-            <h2 class="section-title">Galeria</h2>
-            <div class="underline"></div>
-            <div class="container">
-
-
-            </div>
-        </section>
-
         <section id="contact" class="contact py-5">
             <h2 class="section-title">zapisy</h2>
             <div class="underline"></div>
             <div class="container">
                 <h6 class="text-center">
-                    <strong>Przy zgłoszeniu proszę podać pełne dane:</strong> <br> imię i nazwisko, adres, telefon, nr
+                    <strong><span style="text-transform: uppercase;">Przy zgłoszeniu proszę podać pełne dane:</span></strong> <br><br> Imię i nazwisko, adres, telefon, nr
                     dowodu osobistego lub paszportu.
                 </h6>
                 <div class="row text-center d-flex my-5 contact-us">
