--- a/index.html
+++ b/index.html
@@ -45,19 +45,27 @@
                 <h2 class="section-title">Informacje</h2>
                 <div class="underline"></div>
                 <h3 class="text-center">
-                    <small>Oaza, rekolekcje i odpoczynek w Chorwacji oraz Bośni i Hercegowinie</small>
+                    <small>Oaza, rekolekcje i odpoczynek w Chorwacji oraz Bośni&nbsp;i&nbsp;Hercegowinie</small>
                 </h3>
                 <div class="row price-info">
                     <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100">
-                        <p><i class="fa-regular fa-calendar"></i></p>
-                        <p class="about-us-cart-text">Data</p>
-                        <h3>27.06 - 5.07 2026 <small>(9 dni)</small></h3>
+                        <div class="price-info-header">
+                            <p><i class="fa-regular fa-calendar"></i></p>
+                            <p class="about-us-cart-text">Data</p>
+                        </div>
+                        <div class="price-info-content">
+                            <h3>27.06 - 5.07 2026 <small> (9&nbsp;dni)</small></h3>
+                        </div>
                     </div>
                     <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300">
-                        <p><i class="fa-regular fa-money-bill-1"></i></p>
-                        <p class="about-us-cart-text">Cena</p>
-                        <h3>900 ZŁ + 350 EUR</h3>
-                        <p style="text-align: center; color: #DC143C;">Zniżki dla młodzieży w wieku 15 do 18 lat</p>
+                        <div class="price-info-header">
+                            <p><i class="fa-regular fa-money-bill-1"></i></p>
+                            <p class="about-us-cart-text">Cena</p>
+                        </div>
+                        <div class="price-info-content">
+                            <h3>900 ZŁ + 350&nbsp;EUR</h3>
+                            <p style="text-align: center; color: #DC143C;">Zniżki dla młodzieży w wieku 15 do 18 lat</p>
+                        </div>
                     </div>
                 </div>
 
@@ -153,7 +161,8 @@
             <div class="underline"></div>
             <div class="container">
                 <h6 class="text-center">
-                    <strong><span style="text-transform: uppercase;">Przy zgłoszeniu proszę podać pełne dane:</span></strong> <br><br> Imię i nazwisko, adres, telefon, nr
+                    <strong><span style="text-transform: uppercase;">Przy zgłoszeniu proszę podać pełne
+                            dane:</span></strong> <br><br> Imię i nazwisko, adres, telefon, nr
                     dowodu osobistego lub paszportu.
                 </h6>
                 <div class="row text-center d-flex my-5 contact-us">
