Make small improvments

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
             <div data-aos="zoom-in-down">
                 <h1>Parafialna Pielgrzymka <br> <span class="blue-text">Medjugorie</span></h1>
                 <p>Parafia pw. Narodzenia NMP Czchów</p>
-                <a href="#about-us" class="btn btn-outline-light mt-2 text-uppercase">Zobacz ofertę</a>
+                <a href="#information" class="btn btn-outline-light mt-2 text-uppercase">Zobacz ofertę</a>
             </div>
         </div>
         <div class="hero-shadow"></div>
     </header>
 
     <main>
-        <section id="about-us" class="about-us bg-light py-5">
+        <section id="information" class="about-us bg-light py-5">
             <div class="container">
                 <h2 class="section-title">Informacje</h2>
                 <div class="underline"></div>
@@ -64,14 +64,14 @@
                         </div>
                         <div class="price-info-content">
                             <h3>900 ZŁ + 350&nbsp;EUR</h3>
-                            <p style="text-align: center; color: #DC143C;">Zniżki dla młodzieży w wieku 15 do 18 lat</p>
+                            <p style="text-align: center; color: #dc143c;">Zniżki dla młodzieży w wieku 15 do 18 lat</p>
                         </div>
                     </div>
                 </div>
 
                 <ul>
                     <li>Opieka duszpasterska i opłata tłumacza w Medjugorje</li><br>
-                    <li>Przejazd autokarem klasy LUX (klimatyzacja, wc, video…) </li><br>
+                    <li>Przejazd autokarem klasy LUX (klimatyzacja, wc, video…)</li><br>
                     <li>Ubezpieczenie KL i NNW i bagaż</li><br>
                     <li>8 śniadań i 7 obiadokolacji</li><br>
                     <li>1 nocleg z 27/28 czerwca w Ludbergu (sanktuarium Krwi Pańskiej – miejsce cudu
@@ -122,18 +122,18 @@
                             <p class="price-title">Dzień 3 - 8</p>
                             <hr>
                             <p>Codzienne wieczorne nabożeństwo międzynarodowe: Różaniec, Msza święta, modlitwa o
-                                uzdrowienie duszy i ciała </p>
+                                uzdrowienie duszy i ciała</p>
                             <p><span>*</span></p>
-                            <p>Po Mszy Świętej Adoracja Najświętszego Sakramentu (wtorek i czwartek) </p>
+                            <p>Po Mszy Świętej Adoracja Najświętszego Sakramentu (wtorek i czwartek)</p>
                             <p><span>*</span></p>
-                            <p>Wspólna Droga Krzyżowa na górę Kriźevac oraz Różaniec na Górę Objawień </p>
+                            <p>Wspólna Droga Krzyżowa na górę Kriźevac oraz Różaniec na Górę Objawień</p>
                             <p><span>*</span></p>
                             <p>Wyjazd do miejscowości Gradać – plażowanie i wypoczynek nad Morzem Adriatyckim w
                                 Chorwacji (co najmniej dwa dni)</p>
                             <p><span>*</span></p>
-                            <p>W miarę możliwości spotkania z Wizjonerami i Ojcami Franciszkanami </p>
+                            <p>W miarę możliwości spotkania z Wizjonerami i Ojcami Franciszkanami</p>
                             <p><span>*</span></p>
-                            <p>Mostar – zwiedzanie zabytkowego Starego Miasta </p>
+                            <p>Mostar – zwiedzanie zabytkowego Starego Miasta</p>
                             <p><span>*</span></p>
                             <p>Wizyta we wspólnocie Cenacolo</p>
                             <p><span>*</span></p>
@@ -163,7 +163,7 @@
                 <h6 class="text-center">
                     <strong><span style="text-transform: uppercase;">Przy zgłoszeniu proszę podać pełne
                             dane:</span></strong> <br><br> Imię i nazwisko, adres, telefon, nr
-                    dowodu osobistego lub paszportu.
+                    dowodu osobistego lub paszportu
                 </h6>
                 <div class="row text-center d-flex my-5 contact-us">
                     <div class="col-md-6 col-lg-4 place-main contact-us" data-aos="zoom-in" data-aos-duration="500"
