Make small improvments in informations section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <p class="about-us-cart-text">Data</p>
                         </div>
                         <div class="price-info-content">
-                            <h3>27.06 - 5.07 2026 <small> (9&nbsp;dni)</small></h3>
+                            <h3 class="date">27.06 - 5.07 2026 <small> (9&nbsp;dni)</small></h3>
                         </div>
                     </div>
                     <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300">
