Create gallery section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/gallery.css">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/2fd544dca9.js" crossorigin="anonymous"></script>
 </head>
@@ -48,7 +49,8 @@
                     <small>Oaza, rekolekcje i odpoczynek w Chorwacji oraz Bośni&nbsp;i&nbsp;Hercegowinie</small>
                 </h3>
                 <div class="row price-info">
-                    <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100">
+                    <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100"
+                        tabindex="0">
                         <div class="price-info-header">
                             <p><i class="fa-regular fa-calendar"></i></p>
                             <p class="about-us-cart-text">Data</p>
@@ -57,7 +59,8 @@
                             <h3 class="date">27.06 - 5.07 2026 <small> (9&nbsp;dni)</small></h3>
                         </div>
                     </div>
-                    <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300">
+                    <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300"
+                        tabindex="0">
                         <div class="price-info-header">
                             <p><i class="fa-regular fa-money-bill-1"></i></p>
                             <p class="about-us-cart-text">Cena</p>
@@ -69,7 +72,7 @@
                     </div>
                 </div>
 
-                <ul>
+                <ul tabindex="0">
                     <li>Opieka duszpasterska i opłata tłumacza w Medjugorje</li><br>
                     <li>Przejazd autokarem klasy LUX (klimatyzacja, wc, video…)</li><br>
                     <li>Ubezpieczenie KL i NNW i bagaż</li><br>
@@ -88,7 +91,7 @@
             <div class="underline"></div>
             <div class="container">
                 <div class="price-wrap row text-center justify-content-center journey-schedule">
-                    <div class="col-md-6 col-xl-6">
+                    <div class="col-md-6 col-xl-6" tabindex="0">
                         <div data-aos="zoom-in" data-aos-duration="600">
                             <div class="price-box">
                                 <p class="price-title">Dzień 1</p>
@@ -102,7 +105,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-xl-6">
+                    <div class="col-md-6 col-xl-6" tabindex="0">
                         <div data-aos="zoom-in" data-aos-duration="600" data-aos-delay="200">
                             <div class="price-box">
                                 <p class="price-title">Dzień 2</p>
@@ -117,7 +120,7 @@
                         </div>
                     </div>
 
-                    <div data-aos="zoom-in" data-aos-duration="600">
+                    <div data-aos="zoom-in" data-aos-duration="600" tabindex="0">
                         <div class="price-box">
                             <p class="price-title">Dzień 3 - 8</p>
                             <hr>
@@ -141,7 +144,7 @@
                         </div>
                     </div>
 
-                    <div data-aos="zoom-in" data-aos-duration="600">
+                    <div data-aos="zoom-in" data-aos-duration="600" tabindex="0">
                         <div class="price-box">
                             <p class="price-title">Dzień 9</p>
                             <hr>
@@ -152,6 +155,29 @@
                             <p>Przyjazd do Polski po północy</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="gallery" class="gallery py-5 bg-dark">
+            <h2 class="section-title">Galeria</h2>
+            <div class="underline"></div>
+            <div class="container">
+                <div class="grid">
+                    <div class="item a" data-desc="Križevac"></div>
+                    <div class="item b" data-desc="Križevac - panorama"></div>
+                    <div class="item c" data-desc="Gradac - Chorwacja"></div>
+                    <div class="item d" data-desc="Medjugorie kościół św. Jakuba"></div>
+                    <div class="item e">
+                        <iframe src="https://www.youtube-nocookie.com/embed/lwdAvq7dv9M?si=TeMOVAM5XqIk3NLB"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="item f"></div>
+                    <div class="item i"></div>
+                    <div class="item g"></div>
+                    <div class="item h" data-desc="Droga na Križevac"></div>
                 </div>
             </div>
         </section>
