Reverse gallery and contact sections

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="pl_PL">
-    <meta property="og:title" content="Pielgrzymka Czchów">
+    <meta property="og:title" content="Pielgrzymka Czchów z Parafii Czchów">
     <meta property="og:description"
         content="Informacje o pielgrzymce z Czchowa do Medjugorie: trasa, zapisy, informacje, cena, program, chorwacja, bośnia i hercegowina, parafia, parafia czchow, nmp czchow">
     <meta property="og:url" content="https://pielgrzymkaczchow.pl/">
@@ -159,29 +159,6 @@
             </div>
         </section>
 
-        <section id="gallery" class="gallery py-5 bg-dark">
-            <h2 class="section-title">Galeria</h2>
-            <div class="underline"></div>
-            <div class="container">
-                <div class="grid">
-                    <div class="item a" data-desc="Križevac"></div>
-                    <div class="item b" data-desc="Križevac - panorama"></div>
-                    <div class="item c" data-desc="Gradac - Chorwacja"></div>
-                    <div class="item d" data-desc="Medjugorie kościół św. Jakuba"></div>
-                    <div class="item e">
-                        <iframe src="https://www.youtube-nocookie.com/embed/lwdAvq7dv9M?si=TeMOVAM5XqIk3NLB"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div>
-                    <div class="item f"></div>
-                    <div class="item i"></div>
-                    <div class="item g"></div>
-                    <div class="item h" data-desc="Droga na Križevac"></div>
-                </div>
-            </div>
-        </section>
-
         <section id="contact" class="contact py-5">
             <h2 class="section-title">zapisy</h2>
             <div class="underline"></div>
@@ -217,6 +194,31 @@
             </div>
             <div class="contact-shadow"></div>
         </section>
+
+        <section id="gallery" class="gallery py-5 bg-dark">
+            <h2 class="section-title">Galeria</h2>
+            <div class="underline"></div>
+            <div class="container">
+                <div class="grid">
+                    <div class="item a" data-desc="Križevac"></div>
+                    <div class="item b" data-desc="Križevac - panorama"></div>
+                    <div class="item c" data-desc="Gradac - Chorwacja"></div>
+                    <div class="item d" data-desc="Medjugorie kościół św. Jakuba"></div>
+                    <div class="item e">
+                        <iframe src="https://www.youtube-nocookie.com/embed/lwdAvq7dv9M?si=TeMOVAM5XqIk3NLB"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="item f"></div>
+                    <div class="item i"></div>
+                    <div class="item g"></div>
+                    <div class="item h" data-desc="Droga na Križevac"></div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
     <footer class="bg-dark text-light py-4 text-center">
