Improve the naming conventions for classes in information section

--- a/index.html
+++ b/index.html
@@ -45,31 +45,31 @@
     </header>
 
     <main>
-        <section id="information" class="about-us bg-light py-5">
+        <section id="information" class="information bg-light py-5">
             <div class="container">
                 <h2 class="section-title">Informacje</h2>
                 <div class="underline"></div>
                 <h3 class="text-center">
                     <small>Oaza, rekolekcje i odpoczynek w Chorwacji oraz Bośni&nbsp;i&nbsp;Hercegowinie</small>
                 </h3>
-                <div class="row price-info">
-                    <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100"
+                <div class="row box">
+                    <div class="information-box" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100"
                         tabindex="0">
-                        <div class="price-info-header">
+                        <div class="box-header">
                             <p><i class="fa-regular fa-calendar"></i></p>
-                            <p class="about-us-cart-text">Data</p>
+                            <p class="information-cart-text">Data</p>
                         </div>
-                        <div class="price-info-content">
+                        <div class="box-content">
                             <h3 class="date">27.06 - 5.07 2026 <small> (9&nbsp;dni)</small></h3>
                         </div>
                     </div>
-                    <div class="about-us-info" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300"
+                    <div class="information-box" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300"
                         tabindex="0">
-                        <div class="price-info-header">
+                        <div class="box-header">
                             <p><i class="fa-regular fa-money-bill-1"></i></p>
-                            <p class="about-us-cart-text">Cena</p>
+                            <p class="information-cart-text">Cena</p>
                         </div>
-                        <div class="price-info-content">
+                        <div class="box-content">
                             <h3>900 ZŁ + 350&nbsp;EUR</h3>
                             <p style="text-align: center; color: #dc143c;">Zniżki dla młodzieży w wieku 15 do 18 lat</p>
                         </div>
