Improve the naming conventions for classes in schedule section

--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
             </div>
         </section>
 
-        <section id="prices" class="prices py-5 bg-light" style="background-color: #ebecf2 !important;">
+        <section id="schedule" class="schedule py-5 bg-light" style="background-color: #ebecf2 !important;">
             <h2 class="section-title">Program Pielgrzymki</h2>
             <div class="underline"></div>
             <div class="container">
-                <div class="price-wrap row text-center justify-content-center journey-schedule">
+                <div class="row text-center justify-content-center schedule-container">
                     <div class="col-md-6 col-xl-6" tabindex="0">
                         <div data-aos="zoom-in" data-aos-duration="600">
-                            <div class="price-box">
-                                <p class="price-title">Dzień 1</p>
+                            <div class="schedule-box">
+                                <p class="schedule-box-title">Dzień 1</p>
                                 <hr>
                                 <p>Zbiórka o godz. 5.00, a następnie Msza św. – kościół parafialny w Czchowie</p>
                                 <p><span>*</span></p>
@@ -111,8 +111,8 @@
 
                     <div class="col-md-6 col-xl-6" tabindex="0">
                         <div data-aos="zoom-in" data-aos-duration="600" data-aos-delay="200">
-                            <div class="price-box">
-                                <p class="price-title">Dzień 2</p>
+                            <div class="schedule-box">
+                                <p class="schedule-box-title">Dzień 2</p>
                                 <hr>
                                 <p>Śniadanie w hotelu</p>
                                 <p><span>*</span></p>
@@ -125,8 +125,8 @@
                     </div>
 
                     <div data-aos="zoom-in" data-aos-duration="600" tabindex="0">
-                        <div class="price-box">
-                            <p class="price-title">Dzień 3 - 8</p>
+                        <div class="schedule-box">
+                            <p class="schedule-box-title">Dzień 3 - 8</p>
                             <hr>
                             <p>Codzienne wieczorne nabożeństwo międzynarodowe: Różaniec, Msza święta, modlitwa o
                                 uzdrowienie duszy i ciała</p>
@@ -149,8 +149,8 @@
                     </div>
 
                     <div data-aos="zoom-in" data-aos-duration="600" tabindex="0">
-                        <div class="price-box">
-                            <p class="price-title">Dzień 9</p>
+                        <div class="schedule-box">
+                            <p class="schedule-box-title">Dzień 9</p>
                             <hr>
                             <p>Śniadanie</p>
                             <p><span>*</span></p>
