Change list styles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h3 class="text-center">
                     <small>Oaza, rekolekcje i odpoczynek w Chorwacji oraz Bośni&nbsp;i&nbsp;Hercegowinie</small>
                 </h3>
-                <div class="row box">
+                <div class="box">
                     <div class="information-box" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100"
                         tabindex="0">
                         <div class="box-header">
@@ -76,15 +76,46 @@
                     </div>
                 </div>
 
-                <ul tabindex="0">
-                    <li>Opieka duszpasterska i opłata tłumacza w Medjugorje</li><br>
-                    <li>Przejazd autokarem klasy LUX (klimatyzacja, wc, video…)</li><br>
-                    <li>Ubezpieczenie KL i NNW i bagaż</li><br>
-                    <li>8 śniadań i 7 obiadokolacji</li><br>
-                    <li>1 nocleg z 27/28 czerwca w Ludbergu (sanktuarium Krwi Pańskiej – miejsce cudu
-                        eucharystycznego)
-                    </li><br>
-                    <li>7 noclegów w Medjugorje: pokoje 2-, 3-, 4-osobowe z łazienkami w pensjonacie***</li><br>
+                <ul>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-check"></i></div>
+                        <div class="text">
+                            <p>Opieka duszpasterska i opłata tłumacza w Medjugorje</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-check"></i></div>
+                        <div class="text">
+                            <p>Przejazd autokarem klasy LUX (klimatyzacja, wc, video…)</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-check"></i></div>
+                        <div class="text">
+                            <p>Ubezpieczenie KL i NNW i bagaż</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-check"></i></div>
+                        <div class="text">
+                            <p>8 śniadań i 7 obiadokolacji</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-check"></i></div>
+                        <div class="text">
+                            <p>
+                                1 nocleg z 27/28 czerwca w Ludbergu (sanktuarium Krwi Pańskiej – miejsce cudu
+                                eucharystycznego)
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-check"></i></div>
+                        <div class="text">
+                            <p>7 noclegów w Medjugorje: pokoje 2-, 3-, 4-osobowe z łazienkami w pensjonacie***</p>
+                        </div>
+                    </li>
                 </ul>
 
             </div>
