Add meta description tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Dołącz do pielgrzymki z Parafii Czchów do Medjugorje – program, noclegi, opieka duszpasterska i szczegóły zgłoszeń.">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="pl_PL">
     <meta property="og:title" content="Pielgrzymka Czchów z Parafii Czchów">
