Make small improvments

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         content="Informacje o pielgrzymce z Czchowa do Medjugorie: trasa, zapisy, informacje, cena, program, chorwacja, bośnia i hercegowina, parafia, parafia czchow, nmp czchow">
     <meta property="og:url" content="https://pielgrzymkaczchow.pl/">
     <meta property="og:site_name" content="Pielgrzymka Czchów">
-    <title>Pielgrzymka Medjugorie</title>
+    <title>Pielgrzymka Czchów 2026</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -245,9 +245,9 @@
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
-                    <div class="item f"></div>
-                    <div class="item i"></div>
-                    <div class="item g"></div>
+                    <div class="item f" data-desc="Msza Święta"></div>
+                    <div class="item i" data-desc="Ołtarz polowy"></div>
+                    <div class="item g" data-desc="Matka Boża z Medjugorie"></div>
                     <div class="item h" data-desc="Droga na Križevac"></div>
                 </div>
             </div>
