--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Dołącz do pielgrzymki z Parafii Czchów do Medjugorje – program, noclegi, opieka duszpasterska i szczegóły zgłoszeń.">
+    <meta name="description"
+        content="Dołącz do pielgrzymki z Parafii Czchów do Medjugorje – program, noclegi, opieka duszpasterska i szczegóły zgłoszeń.">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="pl_PL">
-    <meta property="og:title" content="Pielgrzymka Czchów z Parafii Czchów">
+    <meta property="og:title" content="Pielgrzymka Czchów 2026">
     <meta property="og:description"
         content="Informacje o pielgrzymce z Czchowa do Medjugorie: trasa, zapisy, informacje, cena, program, chorwacja, bośnia i hercegowina, parafia, parafia czchow, nmp czchow">
     <meta property="og:url" content="https://pielgrzymkaczchow.pl/">
-    <meta property="og:site_name" content="Pielgrzymka Czchów">
+    <meta property="og:site_name" content="Pielgrzymka Czchów 2026">
     <title>Pielgrzymka Czchów 2026</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
