--- a/index.html
+++ b/index.html
@@ -47,35 +47,27 @@
     </header>
 
     <main>
-        <section id="information" class="information bg-light py-5">
+        <section id="information" class="information py-5">
             <div class="container">
                 <h2 class="section-title">Informacje</h2>
                 <div class="underline"></div>
                 <h3 class="text-center">
                     <small>Oaza, rekolekcje i odpoczynek w Chorwacji oraz Bośni&nbsp;i&nbsp;Hercegowinie</small>
                 </h3>
-                <div class="box">
+                <div class="boxes">
                     <div class="information-box" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100"
                         tabindex="0">
-                        <div class="box-header">
-                            <p><i class="fa-regular fa-calendar"></i></p>
-                            <p class="information-cart-text">Data</p>
-                        </div>
                         <div class="box-content">
-                            <h3 class="date">27.06 - 5.07 2026 <small> (9&nbsp;dni)</small></h3>
+                            <h3 class="date">27.06 - 5.07 <br> 9&nbsp;dni <br>  2026</h3>
                         </div>
                     </div>
                     <div class="information-box" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300"
                         tabindex="0">
-                        <div class="box-header">
-                            <p><i class="fa-regular fa-money-bill-1"></i></p>
-                            <p class="information-cart-text">Cena</p>
-                        </div>
                         <div class="box-content">
-                            <h3>900 ZŁ + 350&nbsp;EUR</h3>
-                            <p style="text-align: center; color: #dc143c;">Zniżki dla młodzieży w wieku 15 do 18 lat</p>
+                            <h3>900 ZŁ <br> + <br> 350&nbsp;EUR</h3>
                         </div>
                     </div>
+                    <p style="text-align: center; color: #dc143cb3;">Zniżki dla młodzieży w wieku 15 do 18 lat</p>
                 </div>
 
                 <ul>
@@ -107,7 +99,7 @@
                         <div class="icon"><i class="fa-solid fa-check"></i></div>
                         <div class="text">
                             <p>
-                                1 nocleg z 27/28 czerwca w Ludbergu (sanktuarium Krwi Pańskiej – miejsce cudu
+                                1 nocleg z 27 / 28 czerwca w Ludbergu (sanktuarium Krwi Pańskiej – miejsce cudu
                                 eucharystycznego)
                             </p>
                         </div>
@@ -123,7 +115,7 @@
             </div>
         </section>
 
-        <section id="schedule" class="schedule py-5 bg-light" style="background-color: #ebecf2 !important;">
+        <section id="schedule" class="schedule py-5">
             <h2 class="section-title">Program Pielgrzymki</h2>
             <div class="underline"></div>
             <div class="container">
@@ -233,7 +225,7 @@
             <div class="contact-shadow"></div>
         </section>
 
-        <section id="gallery" class="gallery py-5 bg-dark">
+        <section id="gallery" class="gallery py-5">
             <h2 class="section-title">Galeria</h2>
             <div class="underline"></div>
             <div class="container">
@@ -255,11 +247,9 @@
                 </div>
             </div>
         </section>
-
-
     </main>
 
-    <footer class="bg-dark text-light py-4 text-center">
+    <footer class="py-4 text-center">
         <p class="mb-0" style="opacity: 0.7;">
             <small>&copy; 2026 | Strony Internetowe
                 <a style="color: inherit;" href="tel:606985335">Tomasz Nosek</a>
