Modify information section

--- a/index.html
+++ b/index.html
@@ -58,19 +58,24 @@
                     <div class="information-box" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100"
                         tabindex="0">
                         <div class="box-content">
-                            <h3 class="date">27.06 - 5.07 <br> 9&nbsp;dni <br>  2026</h3>
+                            <h3 class="date">27.06 - 05.07 <br> <small>(9&nbsp;dni)</small> <br>  2026</h3>
                         </div>
                     </div>
                     <div class="information-box" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300"
                         tabindex="0">
                         <div class="box-content">
-                            <h3>900 ZŁ <br> + <br> 350&nbsp;EUR</h3>
+                            <h3>900 PLN <br> + <br> 350&nbsp;EUR</h3>
                         </div>
                     </div>
-                    <p style="text-align: center; color: #dc143cb3;">Zniżki dla młodzieży w wieku 15 do 18 lat</p>
                 </div>
 
                 <ul>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-check"></i></div>
+                        <div class="text">
+                            <p>Zniżki dla młodzieży w wieku 15&nbsp;do&nbsp;18&nbsp;lat</p>
+                        </div>
+                    </li>
                     <li>
                         <div class="icon"><i class="fa-solid fa-check"></i></div>
                         <div class="text">
