Add wave between information and schedule secitons

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
                 </ul>
 
             </div>
+            <div style="margin-top: 80px;"></div>
+            <img src="/img/wave.svg" alt="Wave">
         </section>
 
         <section id="schedule" class="schedule py-5">
@@ -192,8 +194,10 @@
                 </div>
             </div>
         </section>
-
+        
         <section id="contact" class="contact py-5">
+            <div style="margin-top: 80px;"></div>
+
             <h2 class="section-title">zapisy</h2>
             <div class="underline"></div>
             <div class="container">
